Refactored initializeGrid method